# RSOpt

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
examples/00_phase_velocity_inv/: input_params.yml  plot.ipynb
examples/01_phase_vel_multimode_inv/: input_params.yml  plot.ipynb  run_this_example.sh
external_lib/: CMakeLists.txt
src/: CMakeLists.txt  data.f90  inv.f90  para.f90  rsopt.f90
src/shared/: CMakeLists.txt  argparse.f90  common.f90  setuplog.f90  shared_par.f90  utils.f90
src/surfker/: surfdisp96.f  surfker.f90
